samples/_failures_safe/1761213448_d3f3d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83adc764.c: In function ‘main’:
./samples/SAFE/__tmp_83adc764.c:156:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  156 |         for (int i
      |         ^~~
./samples/SAFE/__tmp_83adc764.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83adc764.c:156:9: error: expected declaration or statement at end of input
